{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 1048,
  "lineage": "a2ff5678-a344-b86a-a7be-f6fc6ff4a65a",
  "resources": [
    {
      "module": "module.test-main.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "polygon_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:loadbalancer/app/jrpc-20221123172638397600000010/72a2fad7a223c9c4",
            "arn_suffix": "app/jrpc-20221123172638397600000010/72a2fad7a223c9c4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jrpc-20221123172638397600000010-1056415161.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:loadbalancer/app/jrpc-20221123172638397600000010/72a2fad7a223c9c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jrpc-20221123172638397600000010",
            "name_prefix": "jrpc-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d35a8f852a337cf1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01702216d0cbcc097"
              },
              {
                "subnet_id": "subnet-01f1d9f368e1727b5"
              },
              {
                "subnet_id": "subnet-0d48961594339d9c4"
              },
              {
                "subnet_id": "subnet-0f5298afee86ec355"
              }
            ],
            "subnets": [
              "subnet-01702216d0cbcc097",
              "subnet-01f1d9f368e1727b5",
              "subnet-0d48961594339d9c4",
              "subnet-0f5298afee86ec355"
            ],
            "tags": {
              "Name": "Polygon Edge JSON-RPC ALB"
            },
            "tags_all": {
              "Name": "Polygon Edge JSON-RPC ALB"
            },
            "vpc_id": "vpc-07e09592f822fc612",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.test-main.module.security.aws_security_group.json_rpc_alb",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "polygon_nodes_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:listener/app/jrpc-20221123172638397600000010/72a2fad7a223c9c4/3e9d9b646e0fc41d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:listener/app/jrpc-20221123172638397600000010/72a2fad7a223c9c4/3e9d9b646e0fc41d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:loadbalancer/app/jrpc-20221123172638397600000010/72a2fad7a223c9c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.alb.aws_lb.polygon_nodes",
            "module.test-main.module.alb.aws_lb_target_group.polygon_nodes",
            "module.test-main.module.security.aws_security_group.json_rpc_alb",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "polygon_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "arn_suffix": "targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jrpc-2022112317261907860000000d",
            "name_prefix": "jrpc-",
            "port": 8545,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "polygon_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f-20221123172746816000000011",
            "port": 8545,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "target_id": "i-0492174b0af6ff719"
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.alb.aws_lb_target_group.polygon_nodes",
            "module.test-main.module.instances.aws_ebs_volume.chain_data",
            "module.test-main.module.instances.aws_instance.polygon_edge_instance",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.aws_volume_attachment.attach_chain_data",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f-20221123172747917600000014",
            "port": 8545,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "target_id": "i-07678f282df195df2"
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.alb.aws_lb_target_group.polygon_nodes",
            "module.test-main.module.instances.aws_ebs_volume.chain_data",
            "module.test-main.module.instances.aws_instance.polygon_edge_instance",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.aws_volume_attachment.attach_chain_data",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f-20221123172747579500000013",
            "port": 8545,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "target_id": "i-0e0d090e6e84219cd"
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.alb.aws_lb_target_group.polygon_nodes",
            "module.test-main.module.instances.aws_ebs_volume.chain_data",
            "module.test-main.module.instances.aws_instance.polygon_edge_instance",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.aws_volume_attachment.attach_chain_data",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f-20221123172747265600000012",
            "port": 8545,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:897347591745:targetgroup/jrpc-2022112317261907860000000d/fe90097b45db130f",
            "target_id": "i-032105f1dbbb50add"
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.alb.aws_lb_target_group.polygon_nodes",
            "module.test-main.module.instances.aws_ebs_volume.chain_data",
            "module.test-main.module.instances.aws_instance.polygon_edge_instance",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.aws_volume_attachment.attach_chain_data",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "polygon_edge_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0080e1081b2c5aef6",
            "arn": "arn:aws:ec2:us-west-2:897347591745:instance/i-0492174b0af6ff719",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "polygon-edge-node-20221123172546492000000006",
            "id": "i-0492174b0af6ff719",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-060cca898216457a6"
              }
            ],
            "primary_network_interface_id": "eni-060cca898216457a6",
            "private_dns": "ip-10-250-0-107.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.0.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:897347591745:key/40b4ce1c-6898-40c6-a618-0ae0cd6e6924",
                "tags": {
                  "Name": "Polygon_Edge_Root_Volume"
                },
                "throughput": 0,
                "volume_id": "vol-0ea16869c860f4f72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0037bee82e69b1ad5",
            "tags": {
              "Name": "Polygon_Edge_Node"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072527d2b77b17da4"
            ]
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"0\"]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "instance_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:network-interface/eni-060cca898216457a6",
            "id": "eni-060cca898216457a6",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:1f:ff:79:1a:1f",
            "owner_id": "897347591745",
            "private_dns_name": "ip-10-250-0-107.us-west-2.compute.internal",
            "private_ip": "10.250.0.107",
            "private_ip_list": [
              "10.250.0.107"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.250.0.107"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-072527d2b77b17da4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0037bee82e69b1ad5",
            "tags": {
              "Name": "Polygon_Edge_Instance_Interface"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Instance_Interface"
            }
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "polygon_edge_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0080e1081b2c5aef6",
            "arn": "arn:aws:ec2:us-west-2:897347591745:instance/i-07678f282df195df2",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "polygon-edge-node-20221123172546492000000006",
            "id": "i-07678f282df195df2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d99ce1653486cdbd"
              }
            ],
            "primary_network_interface_id": "eni-0d99ce1653486cdbd",
            "private_dns": "ip-10-250-1-124.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:897347591745:key/40b4ce1c-6898-40c6-a618-0ae0cd6e6924",
                "tags": {
                  "Name": "Polygon_Edge_Root_Volume"
                },
                "throughput": 0,
                "volume_id": "vol-0dc9648adeb3eee50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b9ebee4df3c4fa2",
            "tags": {
              "Name": "Polygon_Edge_Node"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072527d2b77b17da4"
            ]
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"1\"]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "instance_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:network-interface/eni-0d99ce1653486cdbd",
            "id": "eni-0d99ce1653486cdbd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d0:98:9b:d2:49",
            "owner_id": "897347591745",
            "private_dns_name": "ip-10-250-1-124.us-west-2.compute.internal",
            "private_ip": "10.250.1.124",
            "private_ip_list": [
              "10.250.1.124"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.250.1.124"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-072527d2b77b17da4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b9ebee4df3c4fa2",
            "tags": {
              "Name": "Polygon_Edge_Instance_Interface"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Instance_Interface"
            }
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "polygon_edge_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0080e1081b2c5aef6",
            "arn": "arn:aws:ec2:us-west-2:897347591745:instance/i-0e0d090e6e84219cd",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "polygon-edge-node-20221123172546492000000006",
            "id": "i-0e0d090e6e84219cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c65d6617fe90d311"
              }
            ],
            "primary_network_interface_id": "eni-0c65d6617fe90d311",
            "private_dns": "ip-10-250-2-27.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:897347591745:key/40b4ce1c-6898-40c6-a618-0ae0cd6e6924",
                "tags": {
                  "Name": "Polygon_Edge_Root_Volume"
                },
                "throughput": 0,
                "volume_id": "vol-0b1b6a08b61a90848",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba72a769a967726a",
            "tags": {
              "Name": "Polygon_Edge_Node"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072527d2b77b17da4"
            ]
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"2\"]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "instance_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:network-interface/eni-0c65d6617fe90d311",
            "id": "eni-0c65d6617fe90d311",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:e8:c3:ab:1c:7b",
            "owner_id": "897347591745",
            "private_dns_name": "ip-10-250-2-27.us-west-2.compute.internal",
            "private_ip": "10.250.2.27",
            "private_ip_list": [
              "10.250.2.27"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.250.2.27"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-072527d2b77b17da4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba72a769a967726a",
            "tags": {
              "Name": "Polygon_Edge_Instance_Interface"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Instance_Interface"
            }
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"3\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "polygon_edge_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0080e1081b2c5aef6",
            "arn": "arn:aws:ec2:us-west-2:897347591745:instance/i-032105f1dbbb50add",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "polygon-edge-node-20221123172546492000000006",
            "id": "i-032105f1dbbb50add",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d39813f68a01deaf"
              }
            ],
            "primary_network_interface_id": "eni-0d39813f68a01deaf",
            "private_dns": "ip-10-250-3-25.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.3.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:897347591745:key/40b4ce1c-6898-40c6-a618-0ae0cd6e6924",
                "tags": {
                  "Name": "Polygon_Edge_Root_Volume"
                },
                "throughput": 0,
                "volume_id": "vol-0c4d4b2f3ba49c951",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b131386b6ec3cb8",
            "tags": {
              "Name": "Polygon_Edge_Node"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072527d2b77b17da4"
            ]
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.data.aws_region.current",
            "module.test-main.module.instances.aws_network_interface.instance_interface",
            "module.test-main.module.instances.data.aws_ami.ubuntu_20_04",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.s3.aws_s3_bucket_policy.this",
            "module.test-main.module.security.aws_iam_instance_profile.polygon_edge_node",
            "module.test-main.module.security.aws_iam_role.polygon_edge_node",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.security.data.aws_iam_policy_document.ec2_trust",
            "module.test-main.module.user_data.data.template_cloudinit_config.polygon_edge",
            "module.test-main.module.user_data.data.template_file.polygon_edge_node",
            "module.test-main.module.user_data.data.template_file.polygon_edge_server",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.instances[\"3\"]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "instance_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:network-interface/eni-0d39813f68a01deaf",
            "id": "eni-0d39813f68a01deaf",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:ba:b4:91:56:4f",
            "owner_id": "897347591745",
            "private_dns_name": "ip-10-250-3-25.us-west-2.compute.internal",
            "private_ip": "10.250.3.25",
            "private_ip_list": [
              "10.250.3.25"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.250.3.25"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-072527d2b77b17da4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b131386b6ec3cb8",
            "tags": {
              "Name": "Polygon_Edge_Instance_Interface"
            },
            "tags_all": {
              "Name": "Polygon_Edge_Instance_Interface"
            }
          },
          "dependencies": [
            "module.test-main.data.aws_availability_zones.current",
            "module.test-main.data.aws_iam_policy_document.genesis_s3",
            "module.test-main.data.aws_iam_policy_document.genesis_ssm",
            "module.test-main.module.lambda.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.aws_iam_policy.additional_inline",
            "module.test-main.module.lambda.aws_iam_policy.additional_json",
            "module.test-main.module.lambda.aws_iam_policy.additional_jsons",
            "module.test-main.module.lambda.aws_iam_policy.async",
            "module.test-main.module.lambda.aws_iam_policy.dead_letter",
            "module.test-main.module.lambda.aws_iam_policy.logs",
            "module.test-main.module.lambda.aws_iam_policy.tracing",
            "module.test-main.module.lambda.aws_iam_policy.vpc",
            "module.test-main.module.lambda.aws_iam_role.lambda",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_json",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_many",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.additional_one",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.async",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.logs",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.tracing",
            "module.test-main.module.lambda.aws_iam_role_policy_attachment.vpc",
            "module.test-main.module.lambda.aws_lambda_event_source_mapping.this",
            "module.test-main.module.lambda.aws_lambda_function.this",
            "module.test-main.module.lambda.aws_lambda_function_event_invoke_config.this",
            "module.test-main.module.lambda.aws_lambda_function_url.this",
            "module.test-main.module.lambda.aws_lambda_layer_version.this",
            "module.test-main.module.lambda.aws_lambda_permission.current_version_triggers",
            "module.test-main.module.lambda.aws_lambda_permission.unqualified_alias_triggers",
            "module.test-main.module.lambda.aws_lambda_provisioned_concurrency_config.current_version",
            "module.test-main.module.lambda.aws_s3_object.lambda_package",
            "module.test-main.module.lambda.data.aws_arn.log_group_arn",
            "module.test-main.module.lambda.data.aws_cloudwatch_log_group.lambda",
            "module.test-main.module.lambda.data.aws_iam_policy.tracing",
            "module.test-main.module.lambda.data.aws_iam_policy.vpc",
            "module.test-main.module.lambda.data.aws_iam_policy_document.additional_inline",
            "module.test-main.module.lambda.data.aws_iam_policy_document.assume_role",
            "module.test-main.module.lambda.data.aws_iam_policy_document.async",
            "module.test-main.module.lambda.data.aws_iam_policy_document.dead_letter",
            "module.test-main.module.lambda.data.aws_iam_policy_document.logs",
            "module.test-main.module.lambda.data.aws_partition.current",
            "module.test-main.module.lambda.data.external.archive_prepare",
            "module.test-main.module.lambda.local_file.archive_plan",
            "module.test-main.module.lambda.null_resource.archive",
            "module.test-main.module.s3.aws_s3_bucket.this",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_subnet.private",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "json_rpc_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:security-group/sg-0d35a8f852a337cf1",
            "description": "Allow External Traffic to ALB",
            "egress": [],
            "id": "sg-0d35a8f852a337cf1",
            "ingress": [],
            "name": "Poligon_Edge_JSONRPC_ALB_2022112317261970220000000e",
            "name_prefix": "Poligon_Edge_JSONRPC_ALB_",
            "owner_id": "897347591745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Polygon Edge External"
            },
            "tags_all": {
              "Name": "Polygon Edge External"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "polygon_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:security-group/sg-072527d2b77b17da4",
            "description": "Allow Internal Traffic on Polygon Edge Nodes",
            "egress": [],
            "id": "sg-072527d2b77b17da4",
            "ingress": [],
            "name": "Polygon_Edge_Node_Internal_2022112317261998630000000f",
            "name_prefix": "Polygon_Edge_Node_Internal_",
            "owner_id": "897347591745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Polygon Edge Internal"
            },
            "tags_all": {
              "Name": "Polygon Edge Internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-1666803985",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d35a8f852a337cf1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.security.aws_security_group.json_rpc_alb",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic for ALB",
            "from_port": 80,
            "id": "sgrule-3344007157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d35a8f852a337cf1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.security.aws_security_group.json_rpc_alb",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic for ALB",
            "from_port": 443,
            "id": "sgrule-257088758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d35a8f852a337cf1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.security.aws_security_group.json_rpc_alb",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_jsonrpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Public Access to nodes JSON-RPC",
            "from_port": 8545,
            "id": "sgrule-3204101414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072527d2b77b17da4",
            "self": false,
            "source_security_group_id": "sg-0d35a8f852a337cf1",
            "timeouts": null,
            "to_port": 8545,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.security.aws_security_group.json_rpc_alb",
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_libp2p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "LibP2P Allow",
            "from_port": 1478,
            "id": "sgrule-3304879704",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072527d2b77b17da4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1478,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nodes_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgrule-3857990446",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-072527d2b77b17da4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.security.aws_security_group.polygon_internal",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089c63a95ea3f9045",
            "domain": "vpc",
            "id": "eipalloc-089c63a95ea3f9045",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-237-176-125.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.176.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-public-us-west-2a"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b61248de341d8dc5",
            "domain": "vpc",
            "id": "eipalloc-0b61248de341d8dc5",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-232-193-158.us-west-2.compute.amazonaws.com",
            "public_ip": "44.232.193.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-public-us-west-2b"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097da84e3bef1e96d",
            "domain": "vpc",
            "id": "eipalloc-097da84e3bef1e96d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-211-152-158.us-west-2.compute.amazonaws.com",
            "public_ip": "34.211.152.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-public-us-west-2c"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c88c820826f1cf",
            "domain": "vpc",
            "id": "eipalloc-0b8c88c820826f1cf",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-10-87-237.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.87.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-public-us-west-2d"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2d"
            },
            "vpc": true
          },
          "dependencies": [
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:internet-gateway/igw-0df3ff70012a79c44",
            "id": "igw-0df3ff70012a79c44",
            "owner_id": "897347591745",
            "tags": {
              "Name": "polygon-edge-vpc"
            },
            "tags_all": {
              "Name": "polygon-edge-vpc"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089c63a95ea3f9045",
            "connectivity_type": "public",
            "id": "nat-0ed4eb3a1874a2606",
            "network_interface_id": "eni-06f85155cda96fbf4",
            "private_ip": "10.250.4.214",
            "public_ip": "44.237.176.125",
            "subnet_id": "subnet-0d48961594339d9c4",
            "tags": {
              "Name": "nat-public-us-west-2a"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2a"
            }
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b61248de341d8dc5",
            "connectivity_type": "public",
            "id": "nat-0c6b1807add6ccd39",
            "network_interface_id": "eni-0318c3c79edffbf7b",
            "private_ip": "10.250.5.10",
            "public_ip": "44.232.193.158",
            "subnet_id": "subnet-01f1d9f368e1727b5",
            "tags": {
              "Name": "nat-public-us-west-2b"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2b"
            }
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097da84e3bef1e96d",
            "connectivity_type": "public",
            "id": "nat-0004078d153520dc2",
            "network_interface_id": "eni-0b47cd848dba32ceb",
            "private_ip": "10.250.6.82",
            "public_ip": "34.211.152.158",
            "subnet_id": "subnet-0f5298afee86ec355",
            "tags": {
              "Name": "nat-public-us-west-2c"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2c"
            }
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c88c820826f1cf",
            "connectivity_type": "public",
            "id": "nat-0e38779912c84dd6a",
            "network_interface_id": "eni-0346396d90b73973e",
            "private_ip": "10.250.7.183",
            "public_ip": "52.10.87.237",
            "subnet_id": "subnet-01702216d0cbcc097",
            "tags": {
              "Name": "nat-public-us-west-2d"
            },
            "tags_all": {
              "Name": "nat-public-us-west-2d"
            }
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007b51cc21747f5b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed4eb3a1874a2606",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007b51cc21747f5b1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_nat_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.private",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a3833069ee0acb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c6b1807add6ccd39",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a3833069ee0acb1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_nat_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.private",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a0ebc3e2ee714e441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0004078d153520dc2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0ebc3e2ee714e44",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_nat_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.private",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09eb8423769363e6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e38779912c84dd6a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09eb8423769363e6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_eip.nat",
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_nat_gateway.main",
            "module.test-main.module.vpc.aws_subnet.public",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.private",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df3ff70012a79c44",
            "id": "r-rtb-0f3acd10009031df71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3acd10009031df7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.public",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df3ff70012a79c44",
            "id": "r-rtb-0592d5fe2ec2dc15c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0592d5fe2ec2dc15c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.public",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df3ff70012a79c44",
            "id": "r-rtb-0c46f736abf9bbefb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c46f736abf9bbefb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.public",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df3ff70012a79c44",
            "id": "r-rtb-0c2c7ba404c5931bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2c7ba404c5931bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-main.module.vpc.aws_internet_gateway.main",
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.awscc_ec2_route_table.public",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-0037bee82e69b1ad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.250.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0037bee82e69b1ad5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-west-2a"
            },
            "tags_all": {
              "Name": "private-us-west-2a"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-06b9ebee4df3c4fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b9ebee4df3c4fa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-west-2b"
            },
            "tags_all": {
              "Name": "private-us-west-2b"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-0ba72a769a967726a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba72a769a967726a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-west-2c"
            },
            "tags_all": {
              "Name": "private-us-west-2c"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-05b131386b6ec3cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.250.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b131386b6ec3cb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-west-2d"
            },
            "tags_all": {
              "Name": "private-us-west-2d"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.aws_vpc_ipv4_cidr_block_association.secondary",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-0d48961594339d9c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.250.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d48961594339d9c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-west-2a"
            },
            "tags_all": {
              "Name": "public-us-west-2a"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-01f1d9f368e1727b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.250.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f1d9f368e1727b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-west-2b"
            },
            "tags_all": {
              "Name": "public-us-west-2b"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-0f5298afee86ec355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.250.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5298afee86ec355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-west-2c"
            },
            "tags_all": {
              "Name": "public-us-west-2c"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:subnet/subnet-01702216d0cbcc097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.250.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01702216d0cbcc097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897347591745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-west-2d"
            },
            "tags_all": {
              "Name": "public-us-west-2d"
            },
            "vpc_id": "vpc-07e09592f822fc612"
          },
          "dependencies": [
            "module.test-main.module.vpc.aws_vpc.main",
            "module.test-main.module.vpc.data.aws_availability_zones.current",
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main",
            "module.test-main.module.vpc.data.awscc_ec2_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test-main.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897347591745:vpc/vpc-07e09592f822fc612",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-0408355632062fd96",
            "default_route_table_id": "rtb-0a3c5cc762b61eb50",
            "default_security_group_id": "sg-068db7dc50126c04d",
            "dhcp_options_id": "dopt-02e1b2308d5944527",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e09592f822fc612",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3c5cc762b61eb50",
            "owner_id": "897347591745",
            "tags": {
              "Name": "polygon-edge-vpc"
            },
            "tags_all": {
              "Name": "polygon-edge-vpc"
            }
          },
          "dependencies": [
            "module.test-main.module.vpc.data.aws_vpc_ipam_preview_next_cidr.main"
          ]
        }
      ]
    }
  ]
}